# Social-Gaming

./: .gitignore  CMakeLists.txt  README.md  h q
lib/: CMakeLists.txt
lib/Game/: Config.cpp  Game.cpp
lib/Game/include/: Config.h  Game.h
lib/Rules/model/: RuleNode.cpp  RuleNode.h
lib/Rules/support/include/: ruleNodeSupport.h
lib/Rules/support/src/: ruleNodeSupport.cpp
lib/constants/model/: CMakeLists.txt
lib/constants/model/include/: Support.h
lib/constants/model/src/: Support.cpp
lib/game/: CMakeLists.txt  Config.cpp
lib/game/include/: Config.h  Game.h
lib/game/src/: Config.cpp  Game.cpp
lib/gameState/: CMakeLists.txt
lib/gameState/include/: GameState.h  GameVariables.h
lib/gameState/src/: GameState.cpp  GameVariables.cpp
lib/networking/: CMakeLists.txt
lib/networking/include/: Client.h  MessageQueue.h  Server.h  gameServer.h
lib/networking/src/: Client.cpp  MessageQueue.cpp  Server.cpp  gameServer.cpp
lib/parser/: CMakeLists.txt
lib/parser/include/: gameParser.h  nodeFactory.h  parser.h  utils.h
lib/parser/src/: gameParser.cpp  parser.cpp  utils.cpp
lib/rules/: CMakeLists.txt
lib/rules/include/: ruleNode.h  ruleNodeSupport.h
lib/rules/src/: ruleNode.cpp  ruleNodeSupport.cpp
resources/games/: empty.game  rock-paper-scissors.game
resources/model/: Support.cpp
resources/model/include/: Support.h
tests/: CMakeLists.txt
tests/game/: CMakeLists.txt  game_test.cpp
tests/gameState/: CMakeLists.txt  gameStateTest.cpp
tests/networking/: CMakeLists.txt  gameServer_test.cpp  messageQueue_test.cpp  networking_test.cpp  ui_network_test.cpp
tests/parser/: CMakeLists.txt  parser_test.cpp  rule_test.cpp  temp.cpp  temp@1036.cpp  temp@201.cpp  temp@oct8@544.cpp
tools/: CMakeLists.txt
tools/client-ftxui/: CMakeLists.txt  gameclient.cpp
tools/client-ncurses/: CMakeLists.txt  chatclient.cpp
tools/server/: CMakeLists.txt  chatserver.cpp  gameserver.cpp  gameserver.h  server_executable.cpp
